fixed music page button color on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -555,6 +555,10 @@ body {
     h1 {
       text-align: center;
     }
+
+    button {
+      color: #333333;
+    }
   }
 
   .contactPage {
